--- a/src/index.pug
+++ b/src/index.pug
@@ -1,1 +1,6 @@
-Stenotypie
+script.
+  const onChangeHandler = (e) => {
+    const date = new Date();
+    console.log(e.data, `${date.getHours()}:${date.getMinutes()}:${date.getSeconds()}.${date.getMilliseconds()}`)}
+
+input(oninput="onChangeHandler(event)")
